# worklog-backend

./: .env.local  Dockerfile  Jenkinsfile  LICENSE  README.md  docker-compose-fullstack.yaml  docker-compose.yaml  pyproject.toml
.github/workflows/: 1.build-pipeline.yaml  2.backend-build-deploy.yaml  6.6.build-and-argocd-sync.yaml  hello.yaml
deploy_manifest/: worklog-backend.yaml
src/worklog/: conftest.py  db.py  logger.py  main.py  models.py
src/worklog/routers/health/: health.py  test_health.py
src/worklog/routers/notes/: models.py  notes.py  test_notes.py
src/worklog/routers/todos/: models.py  test_todos.py  todos.py
